--- a/caddy.conf
+++ b/caddy.conf
@@ -1,4 +1,17 @@
+{
+  log {
+    level debug
+    output file /var/log/caddy/access.log {
+      roll_size 10MiB
+      roll_keep 15
+      roll_keep_for 15d
+    }
+  }
+}
+
 :80 {
-  root * /srv/index.html
+  root * /srv
   file_server
+  try_files {path} /
+  encode zstd gzip
 }
